@@ -39,8 +39,7 @@ public class ServiceConcurrentExecutor {
     private ServiceConcurrentExecutor() {
 
         int threads = Runtime.getRuntime().availableProcessors();
-        this.executorService = Executors.newFixedThreadPool(threads);
-    }
+this.executorService = Executors.newVirtualThreadPerTaskExecutor();    }
 
     private ExecutorService setThreadName(boolean isContactForm) {
         ThreadFactory threadFactory = new ThreadFactory() {
